# meerkat

./: .codecov.yml  .gitignore  .gitmodules  .indent.pro  .travis.yml  CMakeLists.txt  GNUmakefile  LICENSE  Makefile  README.md  lcov.bash
cmake/: prevent-in-source-builds.cmake  ragel-gen.cmake
examples/: CMakeLists.txt  dsio-libwebsockets-impl.c  dsio-libwebsockets-impl.h  login.c
include/: dsio.h
include/dsio/: actions.h  allocator.h  client.h  connection.h  dsio.h  error.h  list.h  list.h~  log.h  message.h  topics.h  websocket.h
src/core/: CMakeLists.txt  actions.c  actions.h  allocator.c  array.c  array.h  bb.c  bb.h  builder.c  builder.h  client.c  client.h  conn.c  conn.h  connection-state-actions.rl  connection-state.c  connection-state.h  connection-state.rl  connection.c  connection.h  error.c  list.h  log.c  message.c  message.h  message2.c  mprintf.c  mprintf.h  state-actions.rl  state.rl  topics.c  topics.h
src/core/test/: CMakeLists.txt  allocator.c  test-actions.c  test-allocator.c  test-message.c  test-mprintf.c
src/lib/: actions.c  actions.h  allocator.c  lexer.h  list.h  message.c  message.h  mprintf.c  mprintf.h  strbuf.h  strbuf.x  topics.c  topics.h  utils.c  utils.h
src/lib/test/: CUnitTest.h  allocator.c  test-allocator.c  test-message.c  test-mprintf.c
src/libwebsockets/: CMakeLists.txt  dsio-libwebsockets-impl.c  dsio-libwebsockets-impl.h
